@@ -32,3 +32,4 @@ websocket-client ~= 1.3.2
 google-auth
 google-api-python-client
 https://github.com/VultureProject/Sophos-Central-SIEM-Integration/archive/refs/heads/add_setup-py.zip
+defusedxml
